fix breadcrumb clipping

--- a/apps/client/src/features/page/components/breadcrumbs/breadcrumb.module.css
+++ b/apps/client/src/features/page/components/breadcrumbs/breadcrumb.module.css
@@ -1,11 +1,11 @@
 .breadcrumbs {
-    flex: 1 1 auto;
     display: flex;
     align-items: center;
     overflow: hidden;
 
     a {
         color: var(--mantine-color-default-color);
+        line-height: inherit;
     }
 
     .mantine-Breadcrumbs-breadcrumb {
